# DeepFocus

./: README.md  pyproject.toml
deepfocus/: cli.py  notifier.py  timer.py
tests/: test_timer.py
