[project]
name = "deepfocus"
version = "0.1.0"
description = "A simple CLI Pomodoro timer for deep work"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "plyer"
]

[project.scripts]
deepfocus = "deepfocus.cli:main"
